restart leetCode